--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,40 @@
-asttokens==2.4.1
-comm==0.2.0
-contourpy==1.2.0
+asttokens==3.0.0
+comm==0.2.2
+contourpy==1.3.1
 cycler==0.12.1
-debugpy==1.8.0
+debugpy==1.8.11
 decorator==5.1.1
-executing==2.0.1
-fonttools==4.46.0
-ipykernel==6.27.1
-ipython==8.18.1
-jedi==0.19.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-kiwisolver==1.4.5
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.8
-numpy==1.26.2
-packaging==23.2
-pandas==2.1.3
-parso==0.8.3
+executing==2.1.0
+fonttools==4.55.3
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.2.1
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
 pexpect==4.9.0
-Pillow==10.1.0
-platformdirs==4.1.0
-prompt-toolkit==3.0.41
-psutil==5.9.6
+pillow==11.1.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+psutil==6.1.1
 ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.17.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pyzmq==25.1.2
-seaborn==0.13.0
-six==1.16.0
+pure_eval==0.2.3
+Pygments==2.19.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pyzmq==26.2.0
+seaborn==0.13.2
+six==1.17.0
 stack-data==0.6.3
-tornado==6.4
-traitlets==5.14.0
-tzdata==2023.3
-wcwidth==0.2.12
+tornado==6.4.2
+traitlets==5.14.3
+tzdata==2024.2
+wcwidth==0.2.13
